# hopluccorp

./: AGENTS.md  CLAUDE.md  detail_tuyendung.html  tuyendung.html
.claude/: settings.local.json
.github/workflows/: deploy-api.yml  deploy-web.yml
hopluccorp/: .dockerignore  .editorconfig  .env.example  .gitignore  BUILD_GUIDE.md  Makefile  Procfile  README.md  local.yml  manage.py  production.yml  pyproject.toml
hopluccorp-fontend/: .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
hopluccorp-fontend/src/app/: globals.css  layout.tsx  page.tsx
hopluccorp-fontend/src/app/[locale]/: layout.tsx  page.tsx
hopluccorp-fontend/src/components/animations/: FadeIn.tsx
hopluccorp-fontend/src/components/layout/: Footer.tsx  (+1 more)
hopluccorp-fontend/src/lib/: api.ts  axios.ts  i18n.ts
hopluccorp-fontend/src/schemas/: jobSchema.ts
hopluccorp-fontend/src/store/: store.tsx
hopluccorp-fontend/src/types/: homepage.ts
hopluccorp/.envs/.local/: .django  .postgres
hopluccorp/compose/local/django/: Dockerfile  start
hopluccorp/compose/local/django/celery/beat/: start
hopluccorp/compose/local/django/celery/flower/: start
hopluccorp/compose/production/django/: Dockerfile  entrypoint  start
hopluccorp/compose/production/django/celery/beat/: start
hopluccorp/compose/production/django/celery/flower/: start
hopluccorp/compose/production/django/celery/worker/: start
hopluccorp/compose/production/postgres/: Dockerfile
hopluccorp/compose/production/postgres/maintenance/: backup  restore
hopluccorp/compose/production/postgres/maintenance/_sourced/: countdown.sh  yes_no.sh
hopluccorp/config/: celery_app.py  urls.py  wsgi.py
hopluccorp/config/settings/: base.py  local.py  production.py  test.py
hopluccorp/docs/: PLAN.md  deploy.md  homepage.md  i18n.md
hopluccorp/hopluccorp/: conftest.py
hopluccorp/hopluccorp/core/drf_exception/: exceptions.py
hopluccorp/hopluccorp/media/: admin.py  apps.py  models.py
hopluccorp/hopluccorp/media/migrations/: 0001_initial.py
hopluccorp/hopluccorp/pages/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
hopluccorp/hopluccorp/pages/management/commands/: seed_about.py  seed_achievements.py  seed_all.py  seed_business_fields.py  seed_careers.py  seed_homepage.py  seed_news.py  seed_organization.py  seed_projects.py  seed_resources.py  seed_seo.py
hopluccorp/hopluccorp/pages/migrations/: 0001_initial.py  0002_siteconfig_newsarticle.py  0003_alter_aboutblock_options_alter_aboutsection_options_and_more.py  0004_rename_image_zh_aboutblock_image_zh_hans_and_more.py  0005_about_page_models.py  0006_pageseo.py  0007_organization_page.py  0008_resources_projects_page.py  0009_business_fields.py  0010_contactsubmission_alter_businessfieldgallery_options_and_more.py  0011_newscategory_newsarticle_category.py  0012_achievementgalleryitem_award.py  0013_careercompany_careerspage_culturephoto_and_more.py
hopluccorp/hopluccorp/pages/static/pages/admin/: language_tabs.css  language_tabs.js
hopluccorp/hopluccorp/pages/templates/admin/pages/: change_form.html
hopluccorp/hopluccorp/social_login/: apps.py
hopluccorp/hopluccorp/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hopluccorp/hopluccorp/users/management/commands/: seed_db.py
hopluccorp/hopluccorp/users/migrations/: 0001_initial.py  0002_alter_user_options.py
hopluccorp/hopluccorp/users_auth/: apps.py  serializers.py  urls.py  views.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: setup.sh  teardown.sh
(+64 files in other folders)
